# holidays

./: .gitignore  .stylish-haskell.yaml  CHANGELOG.md  EDSL.md  LICENSE  README.md  REGIONS.md  fourmolu.yaml  holidays.cabal
src/: Holidays.hs
src/Holidays/: Base.hs  DateFinder.hs  DateTransform.hs  Germany.hs  Israel.hs  Mozambique.hs  Namibia.hs  SouthAfrica.hs  UnitedKingdom.hs  UnitedStates.hs
tst/: Main.hs
tst/Test/: Holidays.hs
tst/Test/Holidays/: Base.hs  Germany.hs  Israel.hs  Mozambique.hs  Namibia.hs  SouthAfrica.hs  UnitedKingdom.hs  UnitedStates.hs
