cabal-version: 3.8

name: holidays
version: 0.1.0.0
synopsis: Library for country public holidays
description:
  Library for country public holidays. Provides a small EDSL to describe holidays for a country.
category: Date
homepage: https://github.com/danielc777888/holidays
license: MIT
license-file: LICENSE
author: Daniel Cabral
maintainer: danielc777888@gmail.com
extra-doc-files: CHANGELOG.md

tested-with: GHC == 9.4.8

source-repository head
  type: git
  location: git://github.com/danielc777888/holidays.git

common common
  ghc-options: -Wall
  build-depends:
    base ^>=4.17.2.1,
    containers ^>=0.7,
    text ^>=2.1,
    time >=1.4 && <2
  default-language: GHC2021

library
  import: common
  exposed-modules: Holidays
  other-modules:
    Holidays.Base
    Holidays.DateFinder
    Holidays.DateTransform
    Holidays.Namibia
    Holidays.SouthAfrica
    Holidays.UnitedKingdom
    Holidays.UnitedStates
  hs-source-dirs: src

test-suite tests
  import: common
  type: exitcode-stdio-1.0
  build-depends:
    holidays,
    tasty >=1.5,
    tasty-hunit >=0.10,
    tasty-quickcheck >=0.10,
    text ^>=2.1
  hs-source-dirs: tst
  main-is: Main.hs
  other-modules:
    Test.Holidays
    Test.Holidays.Namibia
    Test.Holidays.SouthAfrica
    Test.Holidays.UnitedKingdom
    Test.Holidays.UnitedStates
