cabal-version: 3.0

name: holidays
version: 0.3.0.0
synopsis: Library for country public holidays
description:
  Library for country public holidays. Provides a small EDSL to describe holidays for a country.
category: Date
homepage: https://github.com/danielc777888/holidays
license: MIT
license-file: LICENSE
author: Daniel Cabral
maintainer: danielc777888@gmail.com
extra-doc-files: CHANGELOG.md

tested-with: GHC == 9.8.1 

source-repository head
  type: git
  location: git://github.com/danielc777888/holidays.git

common common
  ghc-options: -Wall
  build-depends:
    base ^>=4.19.0.0,
    containers ^>=0.7,
    text ^>=2.1,
    time >=1.4 && <2
  default-language: Haskell2010 

library
  import: common
  exposed-modules:
    Holidays
  other-modules:
    Holidays.Base
    Holidays.DateFinder
    Holidays.DateTransform
    Holidays.Germany
    Holidays.Mozambique
    Holidays.Namibia
    Holidays.SouthAfrica
    Holidays.UnitedKingdom
    Holidays.UnitedStates
  hs-source-dirs: src

test-suite tests
  import: common
  type: exitcode-stdio-1.0
  build-depends:
    holidays,
    tasty >=1.5,
    tasty-hunit >=0.10,
    tasty-quickcheck >=0.10,
    text ^>=2.1
  hs-source-dirs: tst
  main-is: Main.hs
  other-modules:
    Test.Holidays
    Test.Holidays.Germany
    Test.Holidays.Mozambique
    Test.Holidays.Namibia
    Test.Holidays.SouthAfrica
    Test.Holidays.UnitedKingdom
    Test.Holidays.UnitedStates
